[gd_scene load_steps=50 format=2]

[ext_resource path="res://assets/viking/viking2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/attack_sound1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/attack_sound2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/whoosh.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/player_hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/player_groan.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/whoosh_short.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/healthbar/healthbar-progress.png" type="Texture" id=9]
[ext_resource path="res://assets/healthbar/healthbar-under.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SwordHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SwordHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=5]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 8.0

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "block"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=14]
resource_local_to_scene = true
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/attack1/node = SubResource( 10 )
states/attack1/position = Vector2( 307, 233 )
states/attack2/node = SubResource( 11 )
states/attack2/position = Vector2( 570, 233 )
states/block/node = SubResource( 12 )
states/block/position = Vector2( 612, 62 )
states/die/node = SubResource( 13 )
states/die/position = Vector2( 42, 95 )
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 380, 134 )
states/jump/node = SubResource( 15 )
states/jump/position = Vector2( 712, 153 )
states/run/node = SubResource( 16 )
states/run/position = Vector2( 380, 47 )
transitions = [ "idle", "block", SubResource( 17 ), "block", "idle", SubResource( 18 ), "idle", "run", SubResource( 19 ), "run", "idle", SubResource( 20 ), "jump", "idle", SubResource( 21 ), "idle", "jump", SubResource( 22 ), "attack1", "idle", SubResource( 23 ), "idle", "attack1", SubResource( 24 ), "run", "attack1", SubResource( 25 ), "idle", "attack2", SubResource( 26 ), "attack2", "idle", SubResource( 27 ), "idle", "die", SubResource( 28 ), "attack2", "die", SubResource( 29 ), "attack1", "die", SubResource( 30 ), "run", "attack2", SubResource( 31 ), "jump", "attack1", SubResource( 32 ), "jump", "attack2", SubResource( 33 ), "jump", "block", SubResource( 34 ), "run", "block", SubResource( 35 ), "attack1", "block", SubResource( 36 ), "attack2", "block", SubResource( 37 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -87, 17 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
vframes = 6
hframes = 9

[node name="SwordHit" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/SwordHit"]
position = Vector2( 15, 7 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 2 )
anims/attack2 = SubResource( 3 )
anims/block = SubResource( 4 )
anims/die = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 7 )
shape = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 6 )
rotation = 1.56785
enabled = true
cast_to = Vector2( 0, 14 )

[node name="AttackSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AttackSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Whoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="GroanSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="WhooshShort" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -139.0
margin_top = -77.0
margin_right = -115.0
margin_bottom = -73.0
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Sprite/SwordHit" to="." method="_on_SwordHit_body_entered"]
